--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   
   url_launcher: ^5.4.10
   line_icons: ^0.2.0
+  http: 
   google_nav_bar: ^2.2.0
   google_fonts: ^1.1.0
   flutter:
